[project]
name = "uv-tool-python-version"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = []

[project.scripts]
uv-tool-python-version = "uv_tool_python_version:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
